--- a/vercel.json
+++ b/vercel.json
@@ -28,12 +28,16 @@
     { "source": "/api/challenges/:path*", "destination": "/api/challenges/[...path]" },
     { "source": "/api/social/:path*", "destination": "/api/social/[...path]" },
     { "source": "/api/ai/:path*", "destination": "/api/ai/[...path]" },
+    { "source": "/api/protocols/:path*", "destination": "/api/protocols/[...path]" },
+    { "source": "/api/groups/:path*", "destination": "/api/organizations/[...path]" },
+    { "source": "/groups/:path*", "destination": "/api/organizations/[...path]" },
     { "source": "/auth/:path*", "destination": "/api/auth/[...path]" },
     { "source": "/habits/:path*", "destination": "/api/habits/[...path]" },
     { "source": "/tasks/:path*", "destination": "/api/tasks/[...path]" },
     { "source": "/user/:path*", "destination": "/api/user/[...path]" },
     { "source": "/challenges/:path*", "destination": "/api/challenges/[...path]" },
     { "source": "/social/:path*", "destination": "/api/social/[...path]" },
-    { "source": "/ai/:path*", "destination": "/api/ai/[...path]" }
+    { "source": "/ai/:path*", "destination": "/api/ai/[...path]" },
+    { "source": "/protocols/:path*", "destination": "/api/protocols/[...path]" }
   ]
 }
