--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
