Fix CORS headers, lazy load DB, add logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "resolveJsonModule": true,
     "declaration": true
   },
-  "include": ["api/**/*", "lib/**/*"],
+  "include": ["api/**/*", "lib/**/*", "handlers/**/*", "scripts/**/*"],
   "exclude": ["node_modules", "dist"]
 }
