Add E2E tests for organizations, roles, and protocols
- Implemented comprehensive E2E tests for organization types, role hierarchy, role management, organization membership, organization settings, and UI interactions.
- Created tests for protocol lifecycle, elements, assignment, execution, visibility, and UI management.
- Introduced test helpers for better organization and reusability of test code.
- Ensured tests utilize real database with seeded data for accurate testing scenarios.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vercel dev",
     "deploy": "vercel --prod",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.0",
@@ -20,6 +21,7 @@
     "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
