feat: Enhance habit completion functionality to allow multiple completions per day
- Updated API handler to support marking habits as complete and uncomplete via POST and DELETE methods.
- Modified database schema to remove unique constraint on daily habit logs, allowing multiple completions.
- Added migration script to create a non-unique index for performance.
- Updated habit listing to include today's completion count.
- Enhanced response structure for completion actions to include today's completion count.
- Added new Playwright tests for authentication edge cases, data integrity, and role-based access control.
- Updated Playwright configuration to use local development server.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vercel dev",
+    "dev:local": "tsx server.ts",
     "deploy": "vercel --prod",
     "seed": "node scripts/seed.js",
     "test:e2e": "playwright test"
